# 25_4_simulyator

./: CMakeLists.txt
include/: my-operation.h
src/: CMakeLists.txt  main.cpp  my-operation.cpp
